my blog has appeared

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 <div class="main">
 <h3>This is the home page</h3>
 </div>
-<nav th:replace="partials :: footer" />
+<!--<nav th:replace="partials :: footer" />-->
 <nav th:replace="partials :: materialize-script" />
 </body>
 </html>
