--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -12,8 +12,10 @@
     <div class="nav-wrapper">
         <a href="/" class="brand-logo">Logo</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/hello">Hello</a></li>
+<!--            <li><a href="/hello">Hello</a></li>-->
             <li><a href="/roll-dice">Dice Roller</a></li>
+            <li><a href="/login">Log In</a></li>
+            <li><a href="/register">Register</a></li>
         </ul>
     </div>
 </nav>
