narrowing user restrictions

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,10 +3,12 @@
 <nav th:replace="partials :: head ('Home')"/>
 <body>
 <nav th:replace="partials :: navbar" />
-<div class="main">
+<main>
+
 <h3>This is the home page</h3>
-</div>
-<!--<nav th:replace="partials :: footer" />-->
+
+</main>
+<nav th:replace="partials :: footer" />
 <nav th:replace="partials :: materialize-script" />
 </body>
 </html>
