--- a/src/main/resources/templates/dice-roll-verify.html
+++ b/src/main/resources/templates/dice-roll-verify.html
@@ -3,14 +3,14 @@
 <nav th:replace="partials :: head ('Home')"/>
 
 <body>
-<div class="main">
+<main>
 <nav th:replace="partials :: navbar"/>
 
 <p>You guessed <span th:text="${n}"></span></p>
 <p>The correct number is <span th:text="${correctNumber}"></span></p>
 <p th:if="${verify}">You guessed correctly!</p>
 <p th:if="!${verify}">That's not correct. Try again.</p>
-</div>
+</main>
 <nav th:replace="partials :: footer"/>
 
 <nav th:replace="partials :: materialize-script"/>
