--- a/src/main/resources/templates/guess.html
+++ b/src/main/resources/templates/guess.html
@@ -4,7 +4,7 @@
 <body>
 
 <nav th:replace="partials :: navbar" />
-<div class="main">
+<main>
 <h3>Guess a Number</h3>
 
 <a href="/roll-dice/1">1</a>
@@ -13,7 +13,7 @@
 <a href="/roll-dice/4">4</a>
 <a href="/roll-dice/5">5</a>
 <a href="/roll-dice/6">6</a>
-</div>
+</main>
 
 <nav th:replace="partials :: footer" />
 
