--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -3,7 +3,7 @@
 <nav th:replace="partials :: head ('Create a Post')"/>
 <body>
 <nav th:replace="partials :: navbar" />
-<div class="main">
+<main>
     <form action="/posts/create" th:action="@{/posts/create}" method="post" th:object="${post}">
         <input id="title" name="title" type="text" class="validate" th:field="*{title}"/>
         <label for="title">Title</label>
@@ -14,6 +14,6 @@
     </form>
 
 
-</div>
+</main>
 </body>
 </html>
