--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -3,11 +3,25 @@
 <nav th:replace="partials :: head ('Posts')"/>
 <body>
 <nav th:replace="partials :: navbar" />
-<div class="main">
-<div th:each="post : ${posts}">
-    <p th:text="${post.body}"></p>
-</div>
-</div>
+<main class="container">
+    <div class="row">
+        <div class="col s4">
+            <div class="card" th:each="post : ${posts}">
+                <div class="card-image">
+                    <img th:src="@{'https://picsum.photos/200/300?id=' + ${post.id}}" alt="placeholder"/>
+                    <span class="card-title" th:text="${post.title}"></span>
+                </div>
+                <!--            <p th:text="${post.body}"></p>-->
+                <div class="card-action">
+                    <a th:href="@{/posts/{id}(id=${post.id})}" class="btn-small waves-effect"><i
+                            class="material-icons right">visibility</i>View</a>
+                    <a th:href="@{/posts/{id}/edit(id=${post.id})}" class="btn-small waves-effect"><i
+                            class="material-icons">edit</i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 <nav th:replace="partials :: footer" />
 <nav th:replace="partials :: materialize-script" />
