--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -3,7 +3,7 @@
 <nav th:replace="partials :: head ('Login')"/>
 <body>
 <nav th:replace="partials :: navbar" />
-<div class="main">
+<main>
     <h4>Log In</h4>
     <div th:if="${param.error}">
         Invalid Username and/or Password.
@@ -11,20 +11,20 @@
     <div th:if="${param.logout}">
         You have been logged out.
     </div>
-    <form action="" th:action="@{/login}" method="post">
+    <form th:action="@{/login}" method="post">
         <div class="input-field">
-            <input type="text" id="username" name="username" class="validatie" />
+            <input type="text" id="username" name="username" class="validate" />
             <label for="username">Username</label>
         </div>
         <div class="input-field">
             <input type="password" id="password" name="password" class="validate" />
             <label for="password">Password</label>
         </div>
-        <button type="submit" value="Log In" class="waves-effect">Log In</button>
+        <button type="submit" value="Log In" class="waves-effect btn-small">Log In</button>
     </form>
 
+</main>
     <nav th:replace="partials :: footer" />
     <nav th:replace="partials :: materialize-script" />
-</div>
 </body>
 </html>
