--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<nav th:replace="partials :: head ('Register')"/>
 <body>
+<nav th:replace="partials :: navbar" />
+<main>
+    <h4>Register Today!</h4>
+    <form action="" th:action="@{/register}" method="post" th:object="${user}">
 
+        <div class="input-field">
+            <label for="username">Username</label>
+            <input id="username" type="text" th:field="*{username}" />
+        </div>
+
+        <div class="input-field">
+            <label for="email">E-mail</label>
+            <input id="email" type="text" th:field="*{email}" />
+        </div>
+
+        <div class="input-field">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" />
+        </div>
+
+        <button type="submit" value="Register" class="waves-effect btn-small">Register</button>
+    </form>
+
+    <nav th:replace="partials :: footer" />
+    <nav th:replace="partials :: materialize-script" />
+</main>
 </body>
 </html>
