Working on getting images to upload

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,7 @@
 <main>
 
 <h3>This is the home page</h3>
+    <img src="../img/king-arthur.jpg" class="king-arthur" alt="king-arthur" />
 
 </main>
 <nav th:replace="partials :: footer" />
