--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<nav th:replace="partials :: head ('Register')"/>
+<head th:replace="fragments/header :: head ('Home')"/>
 <body>
-<nav th:replace="partials :: navbar" />
+<nav th:replace="fragments/navbar :: navbar" />
 <main>
     <h4>Register Today!</h4>
     <form action="" th:action="@{/register}" method="post" th:object="${user}">
@@ -25,8 +25,8 @@
         <button type="submit" value="Register" class="waves-effect btn-small">Register</button>
     </form>
 
-    <nav th:replace="partials :: footer" />
-    <nav th:replace="partials :: materialize-script" />
+    <footer th:replace="fragments/footer :: footer" />
+    <script th:replace="fragments/scripts :: scripts" />
 </main>
 </body>
 </html>
