--- a/src/main/resources/templates/error/5xx.html
+++ b/src/main/resources/templates/error/5xx.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <title th:text="'Ooops, ' + ${error}"></title>
+    <head th:replace="fragments/header :: head ('Oops, ' + ${error})"/>
 </head>
 <body>
-<th:block th:switch="${error}">
-    <div th:case="'Not Found'">
-        <h1>Page not found!!</h1>
-    </div>
-    <div th:case="'Forbidden'">
-        <h1>You don't have permission to view this page.</h1>
-    </div>
-</th:block>
-<p>Watch a video instead</p>
-<iframe
-        width="420"
-        height="315"
-        src="https://www.youtube.com/embed/NN75im_us4k?autoplay=1"
-        frameborder="0"
-        allowfullscreen="allowfullscreen"
->
-</iframe>
+
+<nav th:replace="fragments/navbar :: navbar" />
+<main>
+    <th:block th:switch="${error}">
+        <div th:case="'Not Found'">
+            <h1>Page not found!!</h1>
+        </div>
+        <div th:case="'Forbidden'">
+            <h1>You don't have permission to view this page.</h1>
+        </div>
+    </th:block>
+    <a href="/" class="waves-effect btn"><i class="material-icons right">home</i>Go Home</a>
+    <br/>
+    <img th:src="@{'/img/spiltTea.jpg'}" class="spilt-tea" alt="spilt-tea"/>
+</main>
+
+<footer th:replace="fragments/footer :: footer" />
+<script th:replace="fragments/scripts :: scripts" />
 </body>
 </html>
