--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -5,7 +5,7 @@
 <nav th:replace="fragments/navbar :: navbar" />
 
 <main class="container">
-    <h3>Welcome back, <span th:text"{user.username}"></span>!</h3>
+    <h3>Welcome back, <span th:text="${user.username}"></span>!</h3>
     <div th:each="post : ${posts}">
         <div class="col s12">
             <h4 th:text="${post.title}"></h4>
