--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -6,7 +6,7 @@
 <main class="container">
     <div class="col s12 z-depth-2">
         <h3 th:text="${post.title}"/>
-        <img th:each="img : ${post.images}" th:src="${img.path}" alt="placement-img"/>
+        <img th:src="@{'https://picsum.photos/700/300?id=' + ${post.id}}" class="show-img" alt="placeholder"/>
         <p class="card-text" th:text="${post.body}"/>
         <a href="#" th:text="${post.user.email}"></a>
         <div sec:authorize="isAuthenticated()" th:if="${#authentication.principal.id} == ${post.user.id}">
