--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
 
-<footer th:fragment="footer" class="page-footer teal">
-    <p class="offwhite-text">Footer Stuff</p>
+<footer th:fragment="footer" class="page-footer teal lighten-1">
+    <p class="offwhite-text">Alicia's Spring blog © 2019 Copyright</p>
 </footer>
 
 </body>
