--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,10 +3,8 @@
 <head th:replace="fragments/header :: head ('Home')"/>
 <body>
 <nav th:replace="fragments/navbar :: navbar" />
-<main>
-
-<h3>This is the home page</h3>
-
+<main class="homepage">
+        <h3 class="homepage-text">Alicia's Blog</h3>
 </main>
 <footer th:replace="fragments/footer :: footer" />
 <script th:replace="fragments/scripts :: scripts" />
