--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/header :: head ('Home')"/>
 <body>
 <nav th:replace="fragments/navbar :: navbar" />
-<main>
+<main class="container">
     <h4>Register Today!</h4>
     <form action="" th:action="@{/register}" method="post" th:object="${user}">
 
@@ -25,8 +25,8 @@
         <button type="submit" value="Register" class="waves-effect btn-small">Register</button>
     </form>
 
+</main>
     <footer th:replace="fragments/footer :: footer" />
     <script th:replace="fragments/scripts :: scripts" />
-</main>
 </body>
 </html>
